// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchImportsMessage should follow dynamic renames in imports 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room uuid=(testImportFoo) key=(testImportFoo)>
        <ShortName>StubFoo</ShortName>
    </Room>
    <Room uuid=(testNonImportTwo) key=(testNonImportTwo)>
        <Exit to=(ROOM#testImportFoo)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should import multilevel and avoid colliding stub names 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room uuid=(testStubOne)><ShortName>Asset Three</ShortName></Room>
    <Room uuid=(stub)><ShortName>AssetThreeStub</ShortName></Room>
    <Room uuid=(testStubOne) />
    <Room uuid=(testImportThree) key=(testImportThree)>
        <Example uuid=(testImportTwoExample)>
            <Description>Asset Two</Description>
        </Example>
        <Exit to=(ROOM#stub)>test exit</Exit>
        <Exit to=(ROOM#testStubOne)>test exit</Exit>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should properly stub out features in room description 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Feature uuid=(testFeature) key=(featureImport) />
    <Room uuid=(testRoomWithFeatures) key=(testRoomWithFeatures)>
        <Example uuid=(testRoomWithFeaturesExample)>
            <Description><Link to=(testFeature)>Test</Link></Description>
        </Example>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should recursive fetch one level of element and stubs when passed import key 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room uuid=(testImportOne) key=(testImportOne)>
        <Example uuid=(testImportOneExample)>
            <Description>OneTwo</Description>
        </Example>
        <Exit to=(ROOM#testImportStubOne)>test exit one</Exit>
    </Room>
    <Room uuid=(testImportStubOne) key=(testImportStubOne)>
        <ShortName>StubTwo</ShortName>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return element and stubs when passed non-import key 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal)>
    <Room uuid=(testNonImport) key=(testNonImport)>
        <Example uuid=(testNonImportExample)>
            <Description>DescriptionOne</Description>
        </Example>
        <Exit to=(ROOM#testNonImportStub)>test exit</Exit>
    </Room>
    <Room uuid=(testNonImportStub) key=(testNonImportStub)>
        <ShortName>StubOne</ShortName>
    </Room>
</Asset>",
    },
  ],
  "messageType": "FetchImports",
}
`;

exports[`fetchImportsMessage should return empty when passed no keys 1`] = `
Object {
  "importsByAsset": Array [
    Object {
      "assetId": "ASSET#testFinal",
      "wml": "<Asset key=(testFinal) />",
    },
  ],
  "messageType": "FetchImports",
}
`;
